# langgraph_projects

./: .env.example  .gitignore  README.md  pyproject.toml  pyproject_TOML
src/langgraph_projects/level-0/: basics.py
src/langgraph_projects/level-1/: agent6.py  agent_memory7.py  chain4.py  deployment8.py  requirements.txt  router5.py  simple_graph2.py
src/langgraph_projects/level-1/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/langgraph_projects/level-2/: chatbot_external_memory6.py  chatbot_summarization5.py  multiple_schemas3.py  state_reducers2.py  state_schema1.py  trim_filter_messages4.py
src/langgraph_projects/level-3/: breakpoints2.py  dit_state_human_feedback3.py  dynamic_breakpoints4.py  langgraph.json  streaming_interruption1.py  time_travel5.py
src/langgraph_projects/level-4/: langgraph.json  map_reduce3.py  parallelization1.py  research_assistant4.py  sub_graph2.py  temp.py
src/langgraph_projects/level-5/: langgraph.json  memory_agent5.py  memory_agent55.py  memory_store2.py  memoryschema_collection4.py  memoryschema_profile3_1.py  memoryschema_profile3_2.py  requirements.txt
src/langgraph_projects/level_7_1/: Dockerfile  README.md  api.py  demo_pg_checkpoint.py  docker-compose.yml
src/langgraph_projects/level_7_1/tiny-web/: index.html
src/langgraph_projects/level_7_2/: Dockerfile  README.md  api_memory_agent5_d.py  docker-compose.yml  memory_agent5_d.py
src/langgraph_projects/level_7_2/tests/: test_1.md  test_2.md  test_3.md  test_4.md  test_5.md  test_6.md  test_7.md  test_8.md  test_instructions.md  test_todo.md
src/langgraph_projects/level_7_3/: api_memory_agent5_d.py  docker-compose.yml  memory_agent5_d.py
src/langgraph_projects/level_7_3/tests/: test_3.md  test_6.md  test_7.md  test_9.md  test_profile.md  test_stream_2.md  work_2.md
src/langgraph_projects/level_7_4/: Dockerfile  README.md  api_memory_agent5_d.py  docker-compose.yml  memory_agent5_d.py
src/langgraph_projects/level_7_4/tests/: personal_get.md  test_1.md  test_10.md  test_11.md  test_2.md  test_4.md  test_5.md  test_8.md  test_todo.md  (+4 more)
src/langgraph_projects/my_utils/: configuration.py  load_env.py  logger_setup.py
